--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -53,9 +53,9 @@ jobs:
       - name: Test site
         run: |
           bundle exec htmlproofer _site \
-          --disable-external \
-          --ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/" \
-          --swap-urls "^/blog/:/"
+            \-\-disable-external \
+            \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/" \
+            \-\-swap-urls "^/blog/:/"
 
 
       - name: Upload site artifact
