change google analytics id

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ social:
     - https://github.com/ValienteTechnologies
 analytics:
   google:
-    id: G-XW6QFKG15Z
+    id: G-39KGJ5YD68
 avatar: https://valientetechnologies.com/assets/valiente.svg
 social_preview_image: https://valientetechnologies.com/assets/valiente.svg
 toc: true
