update various thingies

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,6 @@
 tamlata:
   name: Ahmet Turan KÜÇÜKOĞLU
-  url: /blog/categories/ahmet-turan-küçükoğlu/
+  url: https://www.linkedin.com/in/ahmet-turan-k%C3%BC%C3%A7%C3%BCko%C4%9Flu-3ab93521b/
 otuva:
   name: Onur Alp AKIN
-  url: /blog/categories/onur-alp-akin/
+  url: https://otuva.io
