add cleanup for old deployments

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -23,6 +23,18 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  cleanup: # https://stackoverflow.com/a/76998444/13883950
+    runs-on: ubuntu-latest
+    permissions: write-all
+
+    steps:
+      - name: 🗑 Delete deployment
+        uses: strumwolf/delete-deployment-environment@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          environment: github-pages
+          onlyRemoveDeployments: true
+
   build:
     runs-on: ubuntu-latest
 
