--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -66,7 +66,7 @@ jobs:
     permissions: write-all
     needs: build
     steps:
-      - name: 🗑 Delete deployment
+      - name: Delete deployment
         uses: strumwolf/delete-deployment-environment@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
