--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,6 +4,6 @@ tamlata:
 otuva:
   name: Onur Alp AKIN
   url: https://otuva.io
-rabia:
+rabiacelikli:
   name: Rabia ÇELİKLİ
   url: https://www.linkedin.com/in/rabia%C3%A7elikli/
